build: add prettier

--- a/src/app/led-list/led-list.component.html
+++ b/src/app/led-list/led-list.component.html
@@ -2,24 +2,27 @@
 
 <table>
   <tbody>
-  <tr>
-    @for (thing of leds; track thing.index) {
-    <td>
-      <pi-led [led]="thing" (ledColorChange)="handleColorChange($event)"></pi-led>
-    </td>
-    }
-  </tr>
+    <tr>
+      @for (thing of leds; track thing.index) {
+        <td>
+          <pi-led
+            [led]="thing"
+            (ledColorChange)="handleColorChange($event)"
+          ></pi-led>
+        </td>
+      }
+    </tr>
   </tbody>
 </table>
 
 @if (false) {
-<table>
-  <tbody>
-  <tr>
-    <td *ngFor="let thing of leds">
-      <pi-led [led]="thing"></pi-led>
-    </td>
-  </tr>
-  </tbody>
-</table>
+  <table>
+    <tbody>
+      <tr>
+        <td *ngFor="let thing of leds">
+          <pi-led [led]="thing"></pi-led>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 }
