--- a/src/app/led/led.component.html
+++ b/src/app/led/led.component.html
@@ -1,9 +1,9 @@
 <p>led works!</p>
 
-<p>
-  Index: {{ led.index + 1 }}.
-</p>
+<p>Index: {{ led.index + 1 }}.</p>
 
-<div class="box" (click)="handleSelectBox($event)" [style.background-color]="led.color">
-
-</div>
+<div
+  class="box"
+  (click)="handleSelectBox($event)"
+  [style.background-color]="led.color"
+></div>
